2011-01-20  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsa_log_conf.cmake_in: Add warning about passwords.

2011-01-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (openvas_server_sendf_xml): Remove.

2011-01-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (request_handler): Neaten formatting.

2011-01-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Added check for microhttpd library.

2011-01-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (init_validator): Allow any character in LSC passwords.

	* src/html/help.xsl (configure_credentials.html): Update lsc_password.

2011-01-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (create_target_omp): Create target locator string with
	g_markup_escape_text, as password may contain a &.

2011-01-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/help.xsl (configure_credentials.html): Add ! to lsc_password
	example.

2011-01-14  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad.c (init_validator): Add ! to lsc_password.

2010-12-30  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c (main): Adapted --version output to
	comply with GNU Coding Standards
	(http://www.gnu.org/prep/standards/standards.html#g_t_002d_002dversion)

2010-12-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Updated version number.

	* src/html/help.xsl: Updated version number.

2010-12-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 2.0+rc1 release.

	* src/html/help.xsl: Updated version number.

	* CMakeLists.txt: Updated version number.

	* CHANGES: Updated.

2010-12-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-report-details): Add false positive to full
	download levels.

2010-12-18  Matthew Mundell <matthew.mundell@greenbone.net>
